[package]
name = "gol-embedded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gol-rs = { path = "../gol-rs" }
rp-pico = "0.3.0"
embedded-time = "0.12.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
embedded-hal = "0.2.5"
panic-halt = "0.2.0"
ssd1306 = "0.7.0"
embedded-graphics = "0.7.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
