[package]
name = "price-watch-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mercado-rs = { version = "0.1.0", path = "../mercado-rs" }
reqwest = { version = "0.11.10", features = ["rustls-tls", "deflate", "json"]}
tokio = { version = "1", features = ["full"] }
